Copied over from the old website.

--- a/_events/fmas2020.md
+++ b/_events/fmas2020.md
@@ -4,7 +4,7 @@ title: "Second Workshop on Formal Methods for Autonomous Systems"
 date : 2020-12-07
 permalink: /events/fmas2020/
 belogsToSeries: fmas
-image: https://autonomy-and-verification-uol.github.io/images/logos/FMAS-Logo.png
+image: https://autonomy-and-verification.github.io/images/logos/FMAS-Logo.png
 ---
 
 
@@ -34,12 +34,80 @@ for tackling these challenges.
 
 We are especially interested in work using integrated formal methods, discussing the future directions of the field, using Runtime Verification or other approaches to deal with the _reality gap_, the cross over of safety and security, and verification of systems against safety assurance arguments or standards documents.
 
-## Important Dates
+## Programme Information
+
+### Important Dates
 
 * **Submission: ~~11th of September 2020~~ 25th of September 2020 ([AOE](https://www.timeanddate.com/time/zones/aoe))**
 * Notification: ~~23rd of October 2020~~ 26th of October 2020
 * Final Version due: ~~6th of November 2020~~ 13th of November 2020
 * Workshop: 7th of December 2020 (Online)
+
+### Registration
+
+This year, FMAS will be held **online** via a video conference system. We will circulate details closer to the event, when the number of attendees is clearer.
+
+You can register to attend FMAS2020, for **free**, using our [eventbrite](https://www.eventbrite.co.uk/e/second-workshop-on-formal-methods-for-autonomous-systems-tickets-120953927453) page.
+
+### Invited Talks
+
+<style> .talk-title {font-style: italic; } </style>
+<style> .talk-details{ list-style-type: none; } </style>
+
+We had two invited speakers for FMAS 2020.
+
+* Ivan Perez from the NASA / NIA Formal Methods Group.
+<ul class="talk-details">
+<li> <b>Title</b> : <span class="talk-title"> TBA </span> </li>
+<li> <b>Abstract</b>: TBA</li>
+</ul>
+
+* [Louise Dennis](https://personalpages.manchester.ac.uk/staff/louise.dennis/) from the University of Manchester
+<ul class="talk-details">
+<li> <b>Title</b> : <span class="talk-title"> Verifying Machine Ethics </span> </li>
+<li> <b>Abstract</b>: Machine ethics is concerned with the challenge of constructing ethical and ethically behaving artificial agents and systems.  One important theme within machine ethics concerns explicitly ethical agents – those which are not ethical simply because they are constrained by their programming or deployment to be so but which use a concept of ethics in some way as part of their operation.  Normally this requires the provision of rules, utilities or priorities by a programmer, knowledge engineer or user.  In this talk I will address the question of how such explicitly ethical programs can be verified.  What kind of properties can we consider and what kind of errors might we find?</li>
+</ul>
+
+
+
+### Accepted Papers
+
+<style> .paper-title {font-style: italic; } </style>
+<style> .paper-details{ list-style-type: none; } </style>
+
+We accepted the following papers for FMAS 2020.
+
+* <span class="paper-title">How to Formally Model Human in Collaborative Robotics</span>
+<ul class="paper-details">
+<li> <b>Authors:</b> <a href="https://askarpour.github.io/">Mehrnoosh Askarpour </a> </li>
+<li> <b>Abstract: Human-robot collaboration (HRC) is an emerging trend of robotics that promotes the co-presence and cooperation of humans and robots in common workspaces.
+Physical vicinity and interaction between humans and robots, combined with the uncertainty of human behavior, could lead to undesired situations where humans are injured. Thus, safety is a primary priority for HRC applications.
+
+Safety analysis via formal modeling and verification techniques could considerably avoid dangerous consequences, but only if the models of HRC systems are comprehensive and good enough, which requires reasonably realistic models of human behavior. This paper explores state-of-the-art solutions for modeling human and discusses which ones are suitable for HRC scenarios. </b>
+</li>
+</ul>
+
+* <span class="paper-title"> Towards Compositional Verification for Modular Robotic Systems </span>
+<ul class="paper-details">  
+<li> <b>Authors:</b> <a href="https://rafaelcaue.github.io/">Rafael C. Cardoso </a>, <a href="http://www.cs.man.ac.uk/~dennisl">Louise A. Dennis </a>, Marie Farrell,  <a href="https://web.cs.manchester.ac.uk/~michael/">Michael Fisher</a>, and Matt Luckcuck  </li>
+<li> <b>Abstract: Software engineering of modular robotic systems is a challenging task, however, verifying that the developed components all behave as they should individually and as a whole presents its own unique set of challenges. In particular, distinct components in a modular robotic system often require different verification techniques to ensure that they behave as expected. Ensuring whole system consistency when individual components are verified using a variety of techniques and formalisms is difficult. This paper discusses how to use compositional verification to integrate the various verification techniques that are applied to modular robotic software, using a First-Order Logic (FOL) contract that captures each component's assumptions and guarantees. These contracts can then be used to guide the verification of the individual components, be it by testing or the use of a formal method.
+In this paper, we provide an example of the former using an illustrative example of an autonomous robot used in remote inspection. We also discuss a way of defining a confidence metric for the verification associated with each component.</b>
+</li>
+</ul>
+
+* <span class="paper-title"> From Requirements to Autonomous Flight: An Overview of the Monitoring ICAROUS Project </span>
+<ul class="paper-details">
+<li> <b>Authors:</b> <a href="http://shemesh.larc.nasa.gov/people/amd/">Aaron Dutle</a>, <a href="http://shemesh.larc.nasa.gov/people/cam">Cesar Munoz</a>, Esther Conrad, Alwyn Goodloe, Laura Titolo, Ivan Perez, Swee Balachandran, Dimitra Giannakopoulou, Anastasia Mavridou and Thomas Pressburger  </li>
+<li> <b>Abstract: The Independent Configurable Architecture for Reliable Operations of Unmanned Systems (ICAROUS) is a software architecture incorporating a set of algorithms to enable autonomous operations of unmanned aircraft applications. This paper provides an overview of Monitoring ICAROUS, a project whose objective is to provide a formal approach to generating runtime monitors for autonomous systems from requirements written in a structured natural language. This approach integrates FRET, a formal requirement elicitation and authoring tool, and Copilot, a runtime verification framework. FRET is used to specify formal requirements in structured natural language. These requirements are translated into temporal logic formulae. Copilot is then used to generate executable runtime monitors from these temporal logic specifications. The generated monitors are directly integrated into ICAROUS to perform runtime verification during flight.</b>
+</li>
+</ul>
+
+* <span class="paper-title"> YAP: Tool Support for Deriving Safety Controllers from Hazard Analysis and Risk Assessments </span>
+<ul class="paper-details">
+<li> <b>Authors:</b> Mario Gleirscher</li>
+<li> <b>Abstract: This tool paper provides a brief overview of YAP, a research tool for risk modelling and discrete-event safety controller design. For an example from the collaborative robotics domain, it is illustrated how one can use YAP in combination with the stochastic model checker PRISM to derive, verify, and synthesise controllers responsible for switching between activities and safety modes.</b>
+</li>
+</ul>
 
 ## Submission Information
 
@@ -58,13 +126,6 @@ There are two categories of submission:
 Submission will be via [easychair](https://easychair.org/conferences/?conf=fmas2020). Submissions must be prepared using the [EPTCS LaTeX style](http://style.eptcs.org/). **Please note that the page limits above exclude references.**
 
 Each submission will receive at least three, single-blind reviews. If a paper is accepted, at least one of the authors must attend the workshop to present their work. Accepted papers will be published via [EPTCS](http://www.eptcs.org/).
-
-## Venue
-
-This year, FMAS will be held **online** via a video conference system. We will circulate details closer to the event, when the number of attendees is clearer.
-
-## Registration
-Registration for FMAS2020 is free via eventbrite: [https://www.eventbrite.co.uk/e/second-workshop-on-formal-methods-for-autonomous-systems-tickets-120953927453](https://www.eventbrite.co.uk/e/second-workshop-on-formal-methods-for-autonomous-systems-tickets-120953927453)
 
 ## Chairs
 
