Fixing the bold tags on the abstracts.

--- a/_events/fmas2020.md
+++ b/_events/fmas2020.md
@@ -80,32 +80,32 @@ We accepted the following papers for FMAS 2020.
 * <span class="paper-title">How to Formally Model Human in Collaborative Robotics</span>
 <ul class="paper-details">
 <li> <b>Authors:</b> <a href="https://askarpour.github.io/">Mehrnoosh Askarpour </a> </li>
-<li> <b>Abstract: Human-robot collaboration (HRC) is an emerging trend of robotics that promotes the co-presence and cooperation of humans and robots in common workspaces.
+<li> <b>Abstract:</b> Human-robot collaboration (HRC) is an emerging trend of robotics that promotes the co-presence and cooperation of humans and robots in common workspaces.
 Physical vicinity and interaction between humans and robots, combined with the uncertainty of human behavior, could lead to undesired situations where humans are injured. Thus, safety is a primary priority for HRC applications.
 
-Safety analysis via formal modeling and verification techniques could considerably avoid dangerous consequences, but only if the models of HRC systems are comprehensive and good enough, which requires reasonably realistic models of human behavior. This paper explores state-of-the-art solutions for modeling human and discusses which ones are suitable for HRC scenarios. </b>
+Safety analysis via formal modeling and verification techniques could considerably avoid dangerous consequences, but only if the models of HRC systems are comprehensive and good enough, which requires reasonably realistic models of human behavior. This paper explores state-of-the-art solutions for modeling human and discusses which ones are suitable for HRC scenarios.
 </li>
 </ul>
 
 * <span class="paper-title"> Towards Compositional Verification for Modular Robotic Systems </span>
 <ul class="paper-details">  
 <li> <b>Authors:</b> <a href="https://rafaelcaue.github.io/">Rafael C. Cardoso </a>, <a href="http://www.cs.man.ac.uk/~dennisl">Louise A. Dennis </a>, Marie Farrell,  <a href="https://web.cs.manchester.ac.uk/~michael/">Michael Fisher</a>, and Matt Luckcuck  </li>
-<li> <b>Abstract: Software engineering of modular robotic systems is a challenging task, however, verifying that the developed components all behave as they should individually and as a whole presents its own unique set of challenges. In particular, distinct components in a modular robotic system often require different verification techniques to ensure that they behave as expected. Ensuring whole system consistency when individual components are verified using a variety of techniques and formalisms is difficult. This paper discusses how to use compositional verification to integrate the various verification techniques that are applied to modular robotic software, using a First-Order Logic (FOL) contract that captures each component's assumptions and guarantees. These contracts can then be used to guide the verification of the individual components, be it by testing or the use of a formal method.
-In this paper, we provide an example of the former using an illustrative example of an autonomous robot used in remote inspection. We also discuss a way of defining a confidence metric for the verification associated with each component.</b>
+<li> <b>Abstract:</b> Software engineering of modular robotic systems is a challenging task, however, verifying that the developed components all behave as they should individually and as a whole presents its own unique set of challenges. In particular, distinct components in a modular robotic system often require different verification techniques to ensure that they behave as expected. Ensuring whole system consistency when individual components are verified using a variety of techniques and formalisms is difficult. This paper discusses how to use compositional verification to integrate the various verification techniques that are applied to modular robotic software, using a First-Order Logic (FOL) contract that captures each component's assumptions and guarantees. These contracts can then be used to guide the verification of the individual components, be it by testing or the use of a formal method.
+In this paper, we provide an example of the former using an illustrative example of an autonomous robot used in remote inspection. We also discuss a way of defining a confidence metric for the verification associated with each component.
 </li>
 </ul>
 
 * <span class="paper-title"> From Requirements to Autonomous Flight: An Overview of the Monitoring ICAROUS Project </span>
 <ul class="paper-details">
 <li> <b>Authors:</b> <a href="http://shemesh.larc.nasa.gov/people/amd/">Aaron Dutle</a>, <a href="http://shemesh.larc.nasa.gov/people/cam">Cesar Munoz</a>, Esther Conrad, Alwyn Goodloe, Laura Titolo, Ivan Perez, Swee Balachandran, Dimitra Giannakopoulou, Anastasia Mavridou and Thomas Pressburger  </li>
-<li> <b>Abstract: The Independent Configurable Architecture for Reliable Operations of Unmanned Systems (ICAROUS) is a software architecture incorporating a set of algorithms to enable autonomous operations of unmanned aircraft applications. This paper provides an overview of Monitoring ICAROUS, a project whose objective is to provide a formal approach to generating runtime monitors for autonomous systems from requirements written in a structured natural language. This approach integrates FRET, a formal requirement elicitation and authoring tool, and Copilot, a runtime verification framework. FRET is used to specify formal requirements in structured natural language. These requirements are translated into temporal logic formulae. Copilot is then used to generate executable runtime monitors from these temporal logic specifications. The generated monitors are directly integrated into ICAROUS to perform runtime verification during flight.</b>
+<li> <b>Abstract:</b> The Independent Configurable Architecture for Reliable Operations of Unmanned Systems (ICAROUS) is a software architecture incorporating a set of algorithms to enable autonomous operations of unmanned aircraft applications. This paper provides an overview of Monitoring ICAROUS, a project whose objective is to provide a formal approach to generating runtime monitors for autonomous systems from requirements written in a structured natural language. This approach integrates FRET, a formal requirement elicitation and authoring tool, and Copilot, a runtime verification framework. FRET is used to specify formal requirements in structured natural language. These requirements are translated into temporal logic formulae. Copilot is then used to generate executable runtime monitors from these temporal logic specifications. The generated monitors are directly integrated into ICAROUS to perform runtime verification during flight.
 </li>
 </ul>
 
 * <span class="paper-title"> YAP: Tool Support for Deriving Safety Controllers from Hazard Analysis and Risk Assessments </span>
 <ul class="paper-details">
 <li> <b>Authors:</b> Mario Gleirscher</li>
-<li> <b>Abstract: This tool paper provides a brief overview of YAP, a research tool for risk modelling and discrete-event safety controller design. For an example from the collaborative robotics domain, it is illustrated how one can use YAP in combination with the stochastic model checker PRISM to derive, verify, and synthesise controllers responsible for switching between activities and safety modes.</b>
+<li> <b>Abstract:</b> This tool paper provides a brief overview of YAP, a research tool for risk modelling and discrete-event safety controller design. For an example from the collaborative robotics domain, it is illustrated how one can use YAP in combination with the stochastic model checker PRISM to derive, verify, and synthesise controllers responsible for switching between activities and safety modes.
 </li>
 </ul>
 
