--- a/_events/fmas2020.md
+++ b/_events/fmas2020.md
@@ -15,7 +15,7 @@ This one day workshop will bring together researchers working on a range of tech
 to present recent work in the area, discuss key difficulties, and stimulate collaboration between the robotics and formal methods
 communities. This workshop will include invited speakers, contributed papers, and experience reports.
 
-FMAS202 will be held **online**, due to the ongoing disruption caused by COVID-19. Since many of the conferences that we were looking to for hosting the workshop are not accepting satellite events, FMAS2020 will run on its own.
+FMAS 2020 will be held **online**, due to the ongoing disruption caused by COVID-19. Since many of the conferences that we were looking to for hosting the workshop are not accepting satellite events, FMAS 2020 will run stand-alone.
 
 ## Scope
 
@@ -56,13 +56,34 @@ You can register to attend FMAS2020, for **free**, using our [eventbrite](https:
 
 We had two invited speakers for FMAS 2020.
 
-* Ivan Perez from the NASA / NIA Formal Methods Group.
+* Ivan Perez is a research scientist at the National Institute of Aerospace,
+and has been a member of the NASA Formal Methods Group since 2018. As a
+contractor assigned to NASA Langley Research Center, he investigates the application of formal methods to problems in aerospace, with particular focus on runtime verification of unmanned aerial vehicles. In the past, Dr. Perez also worked as a programmer and researcher for the High Performance Computing Center (Germany), IMDEA Software (Spain), the Technical University of Madrid (Spain), and the University of Twente (Netherlands), as well as for multiple functional programming companies. Dr. Perez completed his PhD in Computer Science at the University of Nottingham (UK), which focused on testing and functional programming applied to games and user interfaces. He also holds a Master's Degree in Computational Logic and a Degree of Engineer in Computer Science, both from the Technical University of Madrid.
+
 <ul class="talk-details">
-<li> <b>Title</b> : <span class="talk-title"> TBA </span> </li>
-<li> <b>Abstract</b>: TBA</li>
+<li> <b>Title</b> : <span class="talk-title"> Runtime Verification with Copilot 3 </span> </li>
+<li> <b>Abstract</b>: Ultra-critical systems require high-level assurance, which cannot always be
+guaranteed in compile time. The use of runtime verification (RV) enables
+monitoring these systems in runtime, to detect property violations early and
+limit their potential consequences. However, the introduction of monitors in
+ultra-critical systems poses a challenge, as failures and delays in the RV
+subsystem could affect other subsystems and threaten the mission as a whole.
+
+In this talk we present Copilot 3, a runtime verification framework for
+real-time embedded systems. Copilot monitors are written in a compositional,
+stream-based language with support for a variety of Temporal Logics (TL), which
+results in robust, high-level specifications that are easier to understand than
+low-level imperative implementations. The framework then translates monitor
+specifications into C code with static memory requirements, which can be
+compiled to run on embedded hardware.
+
+We also discuss how Copilot has been used in experimental research by NIA, NASA
+and other organizations, its place in relation to other RV frameworks, and
+possible future directions for RV in autonomous systems.</li>
 </ul>
 
-* [Louise Dennis](https://personalpages.manchester.ac.uk/staff/louise.dennis/) from the University of Manchester
+* [Louise Dennis](https://www.research.manchester.ac.uk/portal/louise.dennis.html) is from the University of Manchester. Her background is in artificial intelligence and more specifically in agent and autonomous systems and automated reasoning. She has worked on the development of several automated reasoning and theorem proving tools, most notably the Agent JPF model checker for BDI agent languages; the lambda-clam proof planning system; and the PROSPER Toolkit for integrating an interactive theorem prover (HOL) with automated reasoning tools (such as SAT solvers) and Case/CAD tools. More recently she has investigated rational agent programming languages and architectures for autonomous systems, with a particular emphasis on verifiable systems and ethical reasoning.
+
 <ul class="talk-details">
 <li> <b>Title</b> : <span class="talk-title"> Verifying Machine Ethics </span> </li>
 <li> <b>Abstract</b>: Machine ethics is concerned with the challenge of constructing ethical and ethically behaving artificial agents and systems.  One important theme within machine ethics concerns explicitly ethical agents – those which are not ethical simply because they are constrained by their programming or deployment to be so but which use a concept of ethics in some way as part of their operation.  Normally this requires the provision of rules, utilities or priorities by a programmer, knowledge engineer or user.  In this talk I will address the question of how such explicitly ethical programs can be verified.  What kind of properties can we consider and what kind of errors might we find?</li>
