--- a/_events/fmas2020.md
+++ b/_events/fmas2020.md
@@ -130,6 +130,13 @@ In this paper, we provide an example of the former using an illustrative example
 </li>
 </ul>
 
+* <span class="paper-title"> A Formal Model for Quality-Driven Decision Making in Self-Adaptive Systems </span>
+<ul class="paper-details">
+<li> <b>Authors:</b> Fatma Kachi, Chafia Bouanaka, and Souheir Merkouche </li>
+<li> <b>Abstract:</b>  Maintaining an acceptable level of quality of service in modern complex systems is challenging and particularly in presence of various forms of uncertainty caused by changing execution context, unpredicted events, etc. Self-adaptability is a well-established approach for modelling such systems, and thus enabling them to achieve functional and/or quality of service objectives by autonomously modifying their behavior at runtime. Guarantying a continuous satisfaction of quality objectives needs a rigorous definition and analysis of system behavioral properties. Formal methods constitute a promising and effective solution in this direction in order to rigorously specify mathematical models of a software system in general and analyze its behavior in particular. They are also largely adopted to analyze and provide guarantees on the required properties of self-adaptive systems. Therefore, we introduce in the present work a formal model for quality-driven self-adaptive systems under uncertainty. We combine high-level Petri nets and plausible Petri nets in order to model complex data structures enabling system quality attributes quantification and to improve the decision-making process through selecting the most plausible plans with regard to the system actual context.
+</li>
+</ul>
+
 ## Submission Information
 
 Topics of interest include (but are not limited to):
