--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,28 @@
+@InProceedings{FerrandoAIRO,
+author="Ferrando, Angelo
+and Kootbally, Zeid
+and Piliptchak, Pavel
+and Cardoso, Rafael C.
+and Schlenoff, Craig
+and Fisher, Michael",
+title="Runtime Verification of the ARIAC competition: Can a robot be Agile and Safe at the same time?",
+booktitle="AIRO",
+year="2020",
+note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>, <span class="orca">ORCA</span>]}
+}
+
+@InProceedings{Cardoso20e,
+author="Cardoso, Rafael C.
+and Dennis, Louise A.
+and Farrell, Marie
+and Fisher, Michael
+and Luckcuck, Matt",
+title="Towards Compositional Verification for Modular Robotic Systems",
+booktitle="Second Workshop on Formal Methods for Autonomous Systems",
+year="2020",
+note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>, <span class="orca">ORCA</span>]}
+}
+
 @InProceedings{Cardoso20d,
 author="Cardoso, Rafael C.
 and Ferrando, Angelo
