--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,12 @@
+@InProceedings{DennisAAAI21,
+author = {Louise A. Dennis and Martin Mose Benzen and Felix Lindner and Michael Fisher},
+title={Verifiable Machine Ethics in Changing Contexts},
+      booktitle={35th AAAI Conference on Artificial Intelligence (AAAI 2021)},
+      editors={Kevin Leyon-Brown and Mausam},
+      year=2021,
+      note={[<span class="va">Verifiable Autonomy</span>, <span class="tas_vn">TAS Verifiability Node</span>], To appear}
+      }
+
 @InProceedings{FerrandoAIRO,
 author="Ferrando, Angelo
 and Kootbally, Zeid
