Adding proceedings link

--- a/_events/fmas2020.md
+++ b/_events/fmas2020.md
@@ -49,6 +49,10 @@ This year, FMAS will be held **online** via a video conference system. We will c
 
 You can register to attend FMAS2020, for **free**, using our [eventbrite](https://www.eventbrite.co.uk/e/second-workshop-on-formal-methods-for-autonomous-systems-tickets-120953927453) page.
 
+### Proceedings
+
+The proceedings for FMAS2020 are available online via [EPTCS](http://eptcs.web.cse.unsw.edu.au/content.cgi?FMAS2020). We would like to thank our editor and the rest of the team at EPTCS for their help with publishing these proceedings.
+
 ### Invited Talks
 
 <style> .talk-title {font-style: italic; } </style>
@@ -127,13 +131,6 @@ In this paper, we provide an example of the former using an illustrative example
 <ul class="paper-details">
 <li> <b>Authors:</b> Mario Gleirscher</li>
 <li> <b>Abstract:</b> This tool paper provides a brief overview of YAP, a research tool for risk modelling and discrete-event safety controller design. For an example from the collaborative robotics domain, it is illustrated how one can use YAP in combination with the stochastic model checker PRISM to derive, verify, and synthesise controllers responsible for switching between activities and safety modes.
-</li>
-</ul>
-
-* <span class="paper-title"> A Formal Model for Quality-Driven Decision Making in Self-Adaptive Systems </span>
-<ul class="paper-details">
-<li> <b>Authors:</b> Fatma Kachi, Chafia Bouanaka, and Souheir Merkouche </li>
-<li> <b>Abstract:</b>  Maintaining an acceptable level of quality of service in modern complex systems is challenging and particularly in presence of various forms of uncertainty caused by changing execution context, unpredicted events, etc. Self-adaptability is a well-established approach for modelling such systems, and thus enabling them to achieve functional and/or quality of service objectives by autonomously modifying their behavior at runtime. Guarantying a continuous satisfaction of quality objectives needs a rigorous definition and analysis of system behavioral properties. Formal methods constitute a promising and effective solution in this direction in order to rigorously specify mathematical models of a software system in general and analyze its behavior in particular. They are also largely adopted to analyze and provide guarantees on the required properties of self-adaptive systems. Therefore, we introduce in the present work a formal model for quality-driven self-adaptive systems under uncertainty. We combine high-level Petri nets and plausible Petri nets in order to model complex data structures enabling system quality attributes quantification and to improve the decision-making process through selecting the most plausible plans with regard to the system actual context.
 </li>
 </ul>
 
