Updating FMAS2020 page from Lab website.

--- a/_events/fmas2020.md
+++ b/_events/fmas2020.md
@@ -35,6 +35,23 @@ for tackling these challenges.
 We are especially interested in work using integrated formal methods, discussing the future directions of the field, using Runtime Verification or other approaches to deal with the _reality gap_, the cross over of safety and security, and verification of systems against safety assurance arguments or standards documents.
 
 ## Programme Information
+### Schedule
+
+(All times are [GMT](https://www.timeanddate.com/time/zones/gmt))
+
+* 12.50 - 13.00: *Introduction*
+* 13.00 - 14.00: **Invited Talk: Runtime Verification with Copilot 3 (Ivan Perez)**
+* 14.00 - 14.15: *BREAK*
+* 14.15 - 14.45: YAP: Tool Support for Deriving Safety Controllers from Hazard Analysis and Risk Assessments (Mario Gleirscher)
+* 14.45 - 15.15: A Formal Model for Quality-Driven Decision Making in Self-Adaptive Systems (Fatma Kachi, Chafia Bouanaka and Souheir Merkouche)
+* 15.15 - 15.45: Towards Compositional Verification for Modular Robotic Systems (Rafael C. Cardoso, Louise A. Dennis, Marie Farrell, Michael Fisher and Matt Luckcuck)
+* 15.45 - 16.00: *BREAK*
+* 16.00 - 17.00: **Invited Talk: Verifying Machine Ethics (Louise A. Dennis)**
+* 17.00 - 17.15: *BREAK*
+* 17.15 - 17.45: How to Formally Model Human in Collaborative Robotics (Mehrnoosh Askarpour)
+* 17.45 - 18.15: From Requirements to Autonomous Flight: An Overview of the Monitoring ICAROUS Project (Aaron Dutle, Cesar Munoz, Esther Conrad, Alwyn Goodloe, Laura Titolo, Ivan Perez, Swee Balachandran, Dimitra Giannakopoulou, Anastasia Mavridou and Thomas Pressburger)
+* 18.15 - 18.30: *Closing*
+
 
 ### Important Dates
 
@@ -134,6 +151,13 @@ In this paper, we provide an example of the former using an illustrative example
 </li>
 </ul>
 
+* <span class="paper-title"> A Formal Model for Quality-Driven Decision Making in Self-Adaptive Systems </span>
+<ul class="paper-details">
+<li> <b>Authors:</b> Fatma Kachi, Chafia Bouanaka, and Souheir Merkouche </li>
+<li> <b>Abstract:</b>  Maintaining an acceptable level of quality of service in modern complex systems is challenging and particularly in presence of various forms of uncertainty caused by changing execution context, unpredicted events, etc. Self-adaptability is a well-established approach for modelling such systems, and thus enabling them to achieve functional and/or quality of service objectives by autonomously modifying their behavior at runtime. Guarantying a continuous satisfaction of quality objectives needs a rigorous definition and analysis of system behavioral properties. Formal methods constitute a promising and effective solution in this direction in order to rigorously specify mathematical models of a software system in general and analyze its behavior in particular. They are also largely adopted to analyze and provide guarantees on the required properties of self-adaptive systems. Therefore, we introduce in the present work a formal model for quality-driven self-adaptive systems under uncertainty. We combine high-level Petri nets and plausible Petri nets in order to model complex data structures enabling system quality attributes quantification and to improve the decision-making process through selecting the most plausible plans with regard to the system actual context.
+</li>
+</ul>
+
 ## Submission Information
 
 Topics of interest include (but are not limited to):
@@ -165,6 +189,7 @@ Each submission will receive at least three, single-blind reviews. If a paper is
   <a href="https://www.research.manchester.ac.uk/portal/en/researchers/matthew-luckcuck(007d8d88-7377-4b3b-a0e0-67168e2a8832).html">Matt Luckcuck</a> <matthew.luckcuck@manchester.ac.uk>, University of Manchester, UK
 </section>
 </article>
+
 
 ## Program Committee
 
