--- a/pubs.bib
+++ b/pubs.bib
@@ -21,14 +21,17 @@ note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>, <sp
 }
 
 @InProceedings{Cardoso20e,
-author="Cardoso, Rafael C.
-and Dennis, Louise A.
-and Farrell, Marie
-and Fisher, Michael
-and Luckcuck, Matt",
-title="Towards Compositional Verification for Modular Robotic Systems",
-booktitle="Second Workshop on Formal Methods for Autonomous Systems",
-year="2020",
+  author    = {Cardoso, Rafael C. and Dennis, Louise A. and Farrell, Marie and Fisher, Michael and Luckcuck, Matt},
+  year      = {2020},
+  title     = {Towards Compositional Verification for Modular Robotic Systems},
+  booktitle = {Proceedings Second Workshop on}
+               Formal Methods for Autonomous Systems,
+               Virtual, 7th of December 2020},
+  series    = {Electronic Proceedings in Theoretical Computer Science},
+  volume    = {329},
+  publisher = {Open Publishing Association},
+  pages     = {15-22},
+  doi       = {10.4204/EPTCS.329.2},
 note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>, <span class="orca">ORCA</span>]}
 }
 
