--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,11 @@
+@inproceedings{DennisAAMAS21,
+      author={Louise. A. Dennis and Nir Oren},
+      title={Explaining BDI agent behaviour through dialogue},
+      booktitle={20th International Conference on Autonomous Agents and Multi-Agent Systems (AAMAS 2021)},
+      year=2021,
+      notes={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>]To appear}
+      }
+
 @InProceedings{DennisAAAI21,
 author = {Louise A. Dennis and Martin Mose Benzen and Felix Lindner and Michael Fisher},
 title={Verifiable Machine Ethics in Changing Contexts},
