--- a/pubs.bib
+++ b/pubs.bib
@@ -1,6 +1,7 @@
 @inproceedings{DennisAAMAS21,
       author={Louise. A. Dennis and Nir Oren},
       title={Explaining BDI agent behaviour through dialogue},
+      editors={U.~Endriss and A.~Now\'{e} and F.~Dignum and A.~Lomuscio},
       booktitle={20th International Conference on Autonomous Agents and Multi-Agent Systems (AAMAS 2021)},
       year=2021,
       notes={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>]To appear}
