--- a/pubs.bib
+++ b/pubs.bib
@@ -1,5 +1,5 @@
 @inproceedings{DennisAAMAS21,
-      author={Louise. A. Dennis and Nir Oren},
+      author={Louise A. Dennis and Nir Oren},
       title={Explaining BDI agent behaviour through dialogue},
       editors={U.~Endriss and A.~Now\'{e} and F.~Dignum and A.~Lomuscio},
       booktitle={20th International Conference on Autonomous Agents and Multi-Agent Systems (AAMAS 2021)},
