--- a/pubs.bib
+++ b/pubs.bib
@@ -33,7 +33,7 @@ note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>, <sp
   author    = {Cardoso, Rafael C. and Dennis, Louise A. and Farrell, Marie and Fisher, Michael and Luckcuck, Matt},
   year      = {2020},
   title     = {Towards Compositional Verification for Modular Robotic Systems},
-  booktitle = {Proceedings Second Workshop on}
+  booktitle = {Proceedings Second Workshop on
                Formal Methods for Autonomous Systems,
                Virtual, 7th of December 2020},
   series    = {Electronic Proceedings in Theoretical Computer Science},
