--- a/pubs.bib
+++ b/pubs.bib
@@ -164,17 +164,37 @@ note = {[<span class="va">Verifiable Autonomy</span>]}
 year=2020}
 
 @inproceedings{Dennis20,
-  author    = {Louise A. Dennis and Marija Slavkovik},
-  title     = {Model-checking Information Diffusion in Social Networks with PRISM},
-  booktitle = {European Conference on Multi-Agent Systems (EUMAS)},
-  year      = {2020}
+  author="Dennis, Louise A.
+and Slavkovik, Marija",
+editor="Bassiliades, Nick
+and Chalkiadakis, Georgios
+and de Jonge, Dave",
+title="Model-Checking Information Diffusion in Social Networks with PRISM",
+booktitle="Multi-Agent Systems and Agreement Technologies",
+year="2020",
+publisher="Springer International Publishing",
+address="Cham",
+pages="475--492",
+abstract="In this paper we present an agent-based approach to formalising information diffusion using Markov models which attempts to account for the internal informational state of the agent and investigate the use of probabilistic model-checking for analysing these models. We model information diffusion as both continuous and discrete time Markov chains, using the latter to provide an agent-centred perspective. We present a negative result - we conclude that current model-checking technology is inadequate for analysing such systems in an interesting way.",
+isbn="978-3-030-66412-1"
 }
 
 @inproceedings{Cardoso20b,
-  author    = {Cardoso, R. C. and Ferrando, A. and Dennis, L. A. and Fisher, M.},
-  title     = {An Interface for Programming Verifiable Autonomous Agents in ROS},
-  booktitle = {European Conference on Multi-Agent Systems (EUMAS)},
-  year      = {2020},
+  author="Cardoso, Rafael C.
+and Ferrando, Angelo
+and Dennis, Louise A.
+and Fisher, Michael",
+editor="Bassiliades, Nick
+and Chalkiadakis, Georgios
+and de Jonge, Dave",
+title="An Interface for Programming Verifiable Autonomous Agents in ROS",
+booktitle="Multi-Agent Systems and Agreement Technologies",
+year="2020",
+publisher="Springer International Publishing",
+address="Cham",
+pages="191--205",
+abstract="Autonomy has been one of the most desirable features for robotic applications in recent years. This is evidenced by a recent surge of research in autonomous driving cars, strong government funding for research in robotics for extreme environments, and overall progress in service robots. Autonomous decision-making is often at the core of these systems, thus, it is important to be able to verify and validate properties that relate to the correct behaviour that is expected of the system. Our main contribution in this paper, is an interface for integrating BDI-based agents into robotic systems developed using ROS. We use the Gwendolen language to program our BDI agents and to make use of the AJPF model checker in order to verify properties related to the decision-making in the agent programs. Our case studies include 3D simulations using a simple autonomous patrolling behaviour of a TurtleBot, and multiple TurtleBots servicing a house that can cooperate with each other in case of failure.",
+isbn="978-3-030-66412-1",
   note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>]}
 }
 
