--- a/pubs.bib
+++ b/pubs.bib
@@ -4,11 +4,11 @@
       editors={U.~Endriss and A.~Now\'{e} and F.~Dignum and A.~Lomuscio},
       booktitle={20th International Conference on Autonomous Agents and Multi-Agent Systems (AAMAS 2021)},
       year=2021,
-      notes={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>], To appear}
+      note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>], To appear}
       }
 
 @InProceedings{DennisAAAI21,
-author = {Louise A. Dennis and Martin Mose Benzen and Felix Lindner and Michael Fisher},
+author = {Louise A. Dennis and Martin Mose Bentzen and Felix Lindner and Michael Fisher},
 title={Verifiable Machine Ethics in Changing Contexts},
       booktitle={35th AAAI Conference on Artificial Intelligence (AAAI 2021)},
       editors={Kevin Leyon-Brown and Mausam},
