--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,12 @@
+@article{Ferrando21,
+      author={Angelo Ferrando and Louise A. Dennis and Rafael C. Cardoso and Michael Fisher and Davide Ancona and Viviana Mascardi},
+      title={Towards a Holistic Approach to Verification and Validation of Autonomous Cognitive Systems},
+      journal={ACM Transactions on Software Engineering and Methodology},
+      note={To appear},
+      year=2021,
+      note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span><, span class="orca">ORCA</span>], To appear}
+     }
+      
 @inproceedings{DennisAAMAS21,
       author={Louise A. Dennis and Nir Oren},
       title={Explaining BDI agent behaviour through dialogue},
