--- a/pubs.bib
+++ b/pubs.bib
@@ -4,9 +4,26 @@
       journal={ACM Transactions on Software Engineering and Methodology},
       note={To appear},
       year=2021,
-      note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span><, span class="orca">ORCA</span>], To appear}
+      note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>], To appear}
      }
       
+@article{FisherMRSWY21,
+  author    = {Michael Fisher and
+               Viviana Mascardi and
+               Kristin Yvonne Rozier and
+               Bernd{-}Holger Schlingloff and
+               Michael Winikoff and
+               Neil Yorke{-}Smith},
+  title     = {Towards a Framework for Certification of Reliable Autonomous Systems},
+  journal   = {Autonomous Agents and Multi Agent Systems},
+  volume    = {35},
+  number    = {1},
+  pages     = {8},
+  year      = {2021},
+  note={[<span class="s4">S4</span>, <span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, 
+        <span class="orca">ORCA</span>, <span class="tas_vn">TAS Verifiability Node</span>]}
+}
+
 @inproceedings{DennisAAMAS21,
       author={Louise A. Dennis and Nir Oren},
       title={Explaining BDI agent behaviour through dialogue},
