--- a/pubs.bib
+++ b/pubs.bib
@@ -7,23 +7,6 @@
       note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>], To appear}
      }
       
-@article{FisherMRSWY21,
-  author    = {Michael Fisher and
-               Viviana Mascardi and
-               Kristin Yvonne Rozier and
-               Bernd{-}Holger Schlingloff and
-               Michael Winikoff and
-               Neil Yorke{-}Smith},
-  title     = {Towards a Framework for Certification of Reliable Autonomous Systems},
-  journal   = {Autonomous Agents and Multi Agent Systems},
-  volume    = {35},
-  number    = {1},
-  pages     = {8},
-  year      = {2021},
-  note={[<span class="s4">S4</span>, <span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, 
-        <span class="orca">ORCA</span>, <span class="tas_vn">TAS Verifiability Node</span>]}
-}
-
 @inproceedings{DennisAAMAS21,
       author={Louise A. Dennis and Nir Oren},
       title={Explaining BDI agent behaviour through dialogue},
@@ -42,6 +25,24 @@ title={Verifiable Machine Ethics in Changing Contexts},
       note={[<span class="va">Verifiable Autonomy</span>, <span class="tas_vn">TAS Verifiability Node</span>], To appear}
       }
 
+@article{FisherMRSWY21,
+  author    = {Michael Fisher and
+               Viviana Mascardi and
+               Kristin Yvonne Rozier and
+               Bernd{-}Holger Schlingloff and
+               Michael Winikoff and
+               Neil Yorke{-}Smith},
+  title     = {Towards a Framework for Certification of Reliable Autonomous Systems},
+  journal   = {Autonomous Agents and Multi Agent Systems},
+  volume    = {35},
+  number    = {1},
+  pages     = {8},
+  year      = {2021},
+    doi       = {10.1007/s10458-020-09487-2},
+  note={[<span class="s4">S4</span>, <span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, 
+        <span class="orca">ORCA</span>, <span class="tas_vn">TAS Verifiability Node</span>]}
+}
+
 @InProceedings{FerrandoAIRO,
 author="Ferrando, Angelo
 and Kootbally, Zeid
@@ -53,6 +54,38 @@ title="Runtime Verification of the ARIAC competition: Can a robot be Agile and S
 booktitle="AIRO",
 year="2020",
 note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>, <span class="orca">ORCA</span>]}
+}
+
+@article{GainerLDHF20,
+  author    = {Paul Gainer and
+               Sven Linker and
+               Clare Dixon and
+               Ullrich Hustadt and
+               Michael Fisher},
+  title     = {Multi-scale Verification of Distributed Synchronisation},
+  journal   = {Formal Methods in Systems Design},
+  volume    = {55},
+  number    = {3},
+  pages     = {171--221},
+  year      = {2020},
+    doi       = {10.1007/s10703-020-00347-z},
+   note={[<span class="s4">S4</span>]}
+}
+
+@article{WebsterBDFM20,
+  author    = {Matt Webster and
+               Michael Breza and
+               Clare Dixon and
+               Michael Fisher and
+               Julie A. McCann},
+  title     = {Exploring the Effects of Environmental Conditions and Design Choices
+               on IoT Systems using Formal Methods},
+  journal   = {Journal of Computational Science},
+  volume    = {45},
+  pages     = {101183},
+  year      = {2020},
+  doi       = {10.1016/j.jocs.2020.101183},
+  note={[<span class="s4">S4</span>]}
 }
 
 @InProceedings{Cardoso20e,
@@ -68,6 +101,25 @@ note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>, <sp
   pages     = {15-22},
   doi       = {10.4204/EPTCS.329.2},
 note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>, <span class="orca">ORCA</span>]}
+}
+
+@inproceedings{ZhaoBSRF0020,
+  author    = {Xingyu Zhao and
+               Alec Banks and
+               James Sharp and
+               Valentin Robu and
+               David Flynn and
+               Michael Fisher and
+               Xiaowei Huang},
+  title     = {A Safety Framework for Critical Systems Utilising Deep Neural Networks},
+  booktitle = {Proc. 39th International Conference on Computer Safety, Reliability, and Security (SAFECOMP)},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {12234},
+  pages     = {244--259},
+  publisher = {Springer},
+  year      = {2020},
+  doi       = {10.1007/978-3-030-54549-9\_16},
+  note = {[<span class="orca">ORCA</span>]}
 }
 
 @InProceedings{Cardoso20d,
