--- a/pubs.bib
+++ b/pubs.bib
@@ -118,7 +118,7 @@ note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>, <sp
   pages     = {244--259},
   publisher = {Springer},
   year      = {2020},
-  doi       = {10.1007/978-3-030-54549-9\_16},
+  doi       = {10.1007/978-3-030-54549-9_16},
   note = {[<span class="orca">ORCA</span>]}
 }
 
