--- a/pubs.bib
+++ b/pubs.bib
@@ -37,7 +37,7 @@ title={Verifiable Machine Ethics in Changing Contexts},
   volume    = {35},
   number    = {1},
   pages     = {8},
-  year      = {2021},
+  year      = 2021,
   doi       = {10.1007/s10458-020-09487-2},
   note={[<span class="s4">S4</span>, <span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, 
         <span class="orca">ORCA</span>, <span class="tas_vn">TAS Verifiability Node</span>]}
@@ -117,7 +117,7 @@ note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>, <sp
   volume    = {12234},
   pages     = {244--259},
   publisher = {Springer},
-  year      = {2020},
+  year      = 2020,
   doi       = {10.1007/978-3-030-54549-9_16},
   note = {[<span class="orca">ORCA</span>]}
 }
