--- a/pubs.bib
+++ b/pubs.bib
@@ -1,8 +1,22 @@
+@article{Cardoso_2021, 
+title={A Review of Agent-Based Programming for Multi-Agent Systems}, 
+volume={10}, 
+ISSN={2073-431X}, 
+DOI={10.3390/computers10020016}, 
+number={2}, 
+journal={Computers}, 
+publisher={MDPI AG}, 
+author={Cardoso, Rafael C. and Ferrando, Angelo}, 
+year={2021}, 
+month={Jan}, 
+pages={16},
+note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>]}
+}
+
 @article{Ferrando21,
       author={Angelo Ferrando and Louise A. Dennis and Rafael C. Cardoso and Michael Fisher and Davide Ancona and Viviana Mascardi},
       title={Towards a Holistic Approach to Verification and Validation of Autonomous Cognitive Systems},
       journal={ACM Transactions on Software Engineering and Methodology},
-      note={To appear},
       year=2021,
       note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>], To appear}
      }
