--- a/_events/fmas2020.md
+++ b/_events/fmas2020.md
@@ -5,6 +5,8 @@ date : 2020-12-07
 permalink: /events/fmas2020/
 belogsToSeries: fmas
 image: https://autonomy-and-verification.github.io/images/logos/FMAS-Logo.png
+redirect_to:
+  - https://fmasworkshop.github.io/fmas2020
 ---
 
 
