--- a/_events/fmas2019.md
+++ b/_events/fmas2019.md
@@ -1,10 +1,12 @@
 ---
-layout: event
+layout: redirect
 title: "First Workshop on Formal Methods for Autonomous Systems"
 date : 2019-10-11
 permalink: /events/fmas2019/
 belogsToSeries: fmas
 image: https://autonomy-and-verification.github.io/images/logos/FMAS-Logo.png
+externalURL: https://fmasworkshop.github.io/FMAS2020/
+newUrl: https://fmasworkshop.github.io/FMAS2020/
 ---
 
 ### A Satellite Workshop at [Formal Methods 2019](http://formalmethods2019.inesctec.pt/)
