--- a/pubs.bib
+++ b/pubs.bib
@@ -495,11 +495,19 @@ month={},
 note = {[<span  class="va">Verifiable Autonomy</span>]}}
 
 @inproceedings{Cardoso19AAMAS,
-  author    = {Rafael C. Cardoso and Rafael H. Bordini},
-  title     = {Decentralised Planning for Multi-Agent Programming Platforms},
-  booktitle = {Proc. of the 18th International Conference on Autonomous Agents and MultiAgent Systems (AAMAS)},
-  year      = {2019},
-  note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>]}
+author = {Cardoso, Rafael C. and Bordini, Rafael H.},
+title = {Decentralised Planning for Multi-Agent Programming Platforms},
+year = {2019},
+isbn = {9781450363099},
+publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+address = {Richland, SC},
+booktitle = {Proceedings of the 18th International Conference on Autonomous Agents and MultiAgent Systems},
+pages = {799–807},
+numpages = {9},
+keywords = {multi-agent development platforms, multi-agent planning, hierarchical task network, goal allocation},
+location = {Montreal QC, Canada},
+series = {AAMAS '19},
+note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>]}
 }
 
 @inproceedings{NalonHD18,
