--- a/pubs.bib
+++ b/pubs.bib
@@ -238,12 +238,22 @@ note = {[<span class="va">Verifiable Autonomy</span>]}
   note = {Poster presented at the Opportunities and Challenges in Space Robotics Workshop held with ICRA 2020. [<span class="fs">FAIR-SPACE</span>]}
 }
 
-@inproceedings{Ferrando20a,
-  author    = {Ferrando, A. and Cardoso, R. C. and Fisher, M. and Ancona, D. and Franceschini, L. and Mascardi, V.},
-  title     = {ROSMonitoring: a Runtime Verification Framework for ROS},
-  booktitle = {Towards Autonomous Robotic Systems Conference (TAROS)},
-  year      = {2020},
-  note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>, <span class="orca">ORCA</span>]}
+@InProceedings{Ferrando20a,
+author="Ferrando, Angelo
+and Cardoso, Rafael C.
+and Fisher, Michael
+and Ancona, Davide
+and Franceschini, Luca
+and Mascardi, Viviana",
+title="ROSMonitoring: A Runtime Verification Framework for ROS",
+booktitle="Towards Autonomous Robotic Systems",
+year="2020",
+publisher="Springer International Publishing",
+address="Cham",
+pages="387--399",
+doi="10.1007/978-3-030-63486-5_40",
+isbn="978-3-030-63486-5",
+note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>, <span class="orca">ORCA</span>]}
 }
 
 @article{dennis_ieee20,
